--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         icons.qrc
+        HighlightDelegate.h
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Music_pleer APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
