--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,10 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         icons.qrc
-        HighlightDelegate.h
+        highlightdelegate.h
+        HoverButton.h
+
+
 
     )
 # Define target properties for Android with Qt 6 as:
