Добавление DbMusicPlayer.db и подключение ее в проект

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ build-*/
 # Временные файлы C++ и IDE
 *.cmake
 CMakeLists.txt.user
-
+/Database/*.sqbpro
 # Файлы временных настроек IDE
 *.swp
 *.swo
