--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
+find_package(Qt6 REQUIRED COMPONENTS Sql)
+
 
 set(TS_FILES Music_pleer_en_EN.ts)
 
@@ -56,7 +58,7 @@ else()
 endif()
 
 target_link_libraries(Music_pleer PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
-
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Sql)
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
