--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         icons.qrc
         highlightdelegate.h
-        HoverButton.h
+
+        HoverLabel.h
 
 
 
